move from bash file to dependencies

--- a/package.json
+++ b/package.json
@@ -23,5 +23,56 @@
   "bugs": {
     "url": "https://github.com/fharper/npm-school/issues"
   },
-  "homepage": "https://github.com/fharper/npm-school#readme"
+  "homepage": "https://github.com/fharper/npm-school#readme",
+  "dependencies": {
+    "javascripting" : "latest",
+    "learnyounode" : "latest",
+    "how-to-npm" : "latest",
+    "stream-adventure" : "latest",
+    "elementary-electron" : "latest",
+    "how-to-markdown" : "latest",
+    "learnyouhtml" : "latest",
+    "functional-javascript-workshop" : "latest",
+    "shader-school" : "latest",
+    "levelmeup" : "latest",
+    "bytewiser" : "latest",
+    "expressworks" : "latest",
+    "bug-clinic" : "latest",
+    "makemehapi" : "latest",
+    "browserify-adventure" : "latest",
+    "promise-it-wont-hurt" : "latest",
+    "introtowebgl" : "latest",
+    "async-you" : "latest",
+    "count-to-6" : "latest",
+    "nodebot-workshop" : "latest",
+    "kick-off-koa" : "latest",
+    "goingnative" : "latest",
+    "lololodash" : "latest",
+    "planetproto" : "latest",
+    "learnyoucouchdb" : "latest",
+    "webgl-workshop" : "latest",
+    "esnext-generation" : "latest",
+    "learn-generators" : "latest",
+    "test-anything" : "latest",
+    "learnyoureact" : "latest",
+    "tower-of-babel" : "latest",
+    "perfschool" : "latest",
+    "learnyoumongo" : "latest",
+    "web-audio-school" : "latest",
+    "regex-adventure" : "latest",
+    "torrential" : "latest",
+    "learn-sass" : "latest",
+    "thinking-in-react" : "latest",
+    "pattern-lab-workshop" : "latest",
+    "node-debug-school" : "latest",
+    "learnyoubash" : "latest",
+    "seneca-in-practice" : "latest",
+    "currying-workshopper" : "latest",
+    "less-is-more" : "latest",
+    "bacon-love" : "latest",
+    "js-best-practices" : "latest",
+    "innersourceadventure" : "latest",
+    "scope-chains-closures" : "latest",
+    "learnuv" : "latest"
+  }
 }
